--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=Backend
-spring.datasource.url=jdbc:postgresql://localhost:5432/chat
-spring.datasource.username=postgres
-spring.datasource.password=maddy
+spring.datasource.url=${DB_CHATURL:jdbc:postgresql://localhost:5432/chat}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:maddy}
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
