--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -85,6 +85,11 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <image>
+                        <name>chat-backend-demo</name>
+                    </image>
+                </configuration>
 			</plugin>
 		</plugins>
 	</build>
